package(default_visibility = ["//visibility:public"])

alias(
    name = "api",
    actual = "@maven//:io_opentelemetry_opentelemetry_api",
)

alias(
    name = "context",
    actual = "@maven//:io_opentelemetry_opentelemetry_context",
)

alias(
    name = "semconv",
    actual = "@maven//:io_opentelemetry_semconv_opentelemetry_semconv",
)
