package(default_visibility = ["//visibility:public"])

alias(
    name = "sdk",
    actual = "@maven//:io_opentelemetry_opentelemetry_sdk",
)

alias(
    name = "common",
    actual = "@maven//:io_opentelemetry_opentelemetry_sdk_common",
)

alias(
    name = "metrics",
    actual = "@maven//:io_opentelemetry_opentelemetry_sdk_metrics",
)
